shared-mime-info		Thomas Leonard <tal00r@ecs.soton.ac.uk>


			Version 0.12 (07-Apr-2003)

* Added *.pm and *.al globs for PERL (Jaap Karssenberg).
	
			Version 0.11 (17-Apr-2003)

* 'make install' validates the common types file against the DTD.

* Install instructions updated for new XDG Base Directory Specification.

* Added new <root-XML> element to identify XML files by
  (namespaceURI, localName) pairs (suggested by Mike Hearn).

* Minor updates to the database itself (Vincent Lefevre).

* Added short discussion of ACAP Media Type Dataset Class to spec (suggested
  by Dave Cridland).

* Updated spec to use XDG Base Directory Specification for paths.

* Clarifications to glob matching section (requested by Jonathan Blandford).

* Added a 'Recommended checking order' section to help interoperability
  (suggested by Lars Hallberg).

* Greatly improved error reporting in update-mime-database, and commented
  the code more.

* Fixed possible segfault if a MIME type was defined twice with no xml:lang
  in the same directory.

* When update-mime-database is run, warn the user if the MIME directory
  given isn't in the search path.


			Version 0.10 (03-Mar-2003)

* Much better validation of input files.

* Added note about the use of extended attributes to store the MIME type.

* Ensure that all changes to generated files happen atomically.

* Change to half-text, half-binary format to make parsing the magic file
  much easier.

* Make it really clear that user prefs don't go in the database.

* Require libxml 2.4.0 (not sure if it's needed, but older versions seem a
  little buggy).

* Fix problem where copying nodes lost the namespace (workaround for libxml
  bug).

* Added DTD to freedesktop.org.xml.

* Spec was confused about whether a match type was an attribute or element
  name. Settled on attribute and updated XML (makes the DTD easier this way).

* Glob pattern for TGIF files.

* Added application/x-cd-image (requested by Stefano Peluchetti).
