@@ -4,6 +4,9 @@ shared-mime-info		Thomas Leonard <tal00r@ecs.soton.ac.uk>
 			Version 0.12 (07-Apr-2003)
 
 * Added *.pm and *.al globs for PERL (Jaap Karssenberg).
+
+* Added a section to the spec about the inode/* MIME types (suggested by
+  Jaap Karssenberg).
 	
 			Version 0.11 (17-Apr-2003)
 
